# Stock-Engine

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
config/: README.md  default.yaml
docs/: PROJECT_CHARTER.md  QUESTIONS.md
docs/backtest/: COST_SOURCES.md  README.md
docs/data/: DATA_AVAILABILITY.md  incoming.md
docs/data/dictionary/: corporate_actions.yaml  equity_eod.yaml  (+2 more)
docs/decisions/: 00-philosophy.md  01-phase1-proposal.md  01-phase1-questions.md  01-phase1.md  02-phase0-proposal.md  02-phase0.md  03-ingest-review.md  03-phase2-proposal.md  03-phase2.md  04-cleaning-review.md  04-phase3-proposal.md  04-phase3.md  05-feature-registry.md  05-phase-feature-registry-proposal.md  06-label-generation.md  06-phase-label-generation-proposal.md  07-modeling.md  07-phase-modeling-proposal.md  08-backtesting.md  08-phase-backtesting-proposal.md  09-inference-serving.md  09-phase-inference-serving-proposal.md  README.md
docs/features/: FEATURE_BACKLOG.md  README.md  datasets.yaml  families.yaml
docs/inference/: README.md
docs/labels/: README.md
docs/models/: README.md
docs/reviews/: adr05-framework-review-packet.md  adr06-label-pipeline-review-packet.md
research/experiments/: run_per_stock_train.py  run_walkforward_train.py
scripts/: bootstrap.py  build_pilot_from_uploads.py  clean.py  run_ingest.py
src/stock_engine/: __init__.py
tests/contracts/: test_contracts.py
tests/integration/: test_backtest_real_pilot.py  test_infer_real_pilot.py  test_per_stock_train_real.py
tests/unit/: test_config.py  test_logging.py
(+176 files in other folders)
